message z-index issue

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -16,6 +16,7 @@ $col-pre-status: $columns / $statuses
       +make-xs-column-offset(1)
       float: none
       padding-right: 35px
+      z-index: 10
 
 #main-navbar
   @extend .navbar
